<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:fillViewport="true"
    android:background="@color/primary"
tools:context=".Vehicle.SingleVehicleForBook"
android:orientation="vertical"
tools:targetApi="o" >

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/primary">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:contentDescription="@null"
            android:focusable="true"
            android:src="@drawable/ic_back"
            app:tint="@color/primaryDark" />


        <TextView
            android:id="@+id/title_Name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginEnd="20dp"
            android:text="@string/vehicle_name"
            android:textAllCaps="true"
            android:textColor="@color/primaryDark"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="RelativeOverlap" />

    </RelativeLayout>


    <ImageView
        android:id="@+id/img_vehicle"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@null" />




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_bottom"
        android:orientation="vertical"
        android:paddingVertical="10dp"
        android:paddingHorizontal="15dp">



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoSizeTextType="uniform"
            android:textSize="20sp"
            android:text="@string/vehicle_name"
            android:textColor="@color/black"
            android:layout_marginTop="20dp"/>

        <TextView
            android:id="@+id/tv_vName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoSizeTextType="uniform"
            android:padding="8dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/bg_general_list"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoSizeTextType="uniform"
            android:text="@string/vehicle_number"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/tv_vNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoSizeTextType="uniform"
            android:padding="8dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/bg_general_list"
            android:text=""
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoSizeTextType="uniform"
            android:text="@string/category"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/tv_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoSizeTextType="uniform"
            android:padding="8dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/bg_general_list"
            android:text=""
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoSizeTextType="uniform"
            android:text="@string/amount"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/tv_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoSizeTextType="uniform"
            android:padding="8dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/bg_general_list"
            android:text=""
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/owner_name"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/tv_ownerName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoSizeTextType="uniform"
            android:padding="8dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/bg_general_list"
            android:text=""
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mobile"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/tv_phoneNo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoSizeTextType="uniform"
            android:padding="8dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/bg_general_list"
            android:text=""
            android:textColor="@color/black"
            android:textSize="20sp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/place"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/tv_place"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoSizeTextType="uniform"
            android:padding="8dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/bg_general_list"
            android:text=""
            android:textColor="@color/black"
            android:textSize="20sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_locate"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_alignParentStart="true"
                android:backgroundTint="@color/light_red"
                android:text="@string/locate"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold"
                app:cornerRadius="5dp"
                app:icon="@drawable/ic_location"
                app:strokeColor="@color/active_red"
                app:strokeWidth="1dp"
                tools:ignore="RelativeOverlap" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_call"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_alignParentEnd="true"
                android:backgroundTint="@color/light_blue"
                android:text="@string/call"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:cornerRadius="5dp"
                app:icon="@drawable/ic_call"
                app:strokeColor="@color/active_blue"
                app:strokeWidth="1dp"
                tools:ignore="RelativeOverlap" />


        </RelativeLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_book"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"
            android:text="@string/vehicle_book"
            android:textColor="@color/white"
            app:cornerRadius="5dp"
            app:strokeColor="@color/black"
            app:strokeWidth="1dp" />



    </LinearLayout>
</LinearLayout>
</ScrollView>