<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:fillViewport="true"
tools:context=".User.OtpVerification"
tools:targetApi="o">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/primary"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/btn_back"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:clickable="true"
        android:src="@drawable/ic_back"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="10dp"
        app:tint="@color/black"
        android:contentDescription="@null"
        android:focusable="true"
        android:layout_marginStart="25dp" />

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/ic_lock"
        android:layout_gravity="center"
        android:layout_marginTop="-20dp"
        android:contentDescription="@null" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autoSizeTextType="uniform"
        android:text="@string/otpVerification"
        android:textSize="40sp"
        android:textColor="@color/white"
        android:gravity="center"
        android:layout_marginTop="45dp"/>
    <TextView
        android:id="@+id/tv_phoneNo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autoSizeTextType="uniform"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="80dp"
        android:layout_marginHorizontal="5dp">

        <EditText
            android:id="@+id/et_otp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="50dp"
            android:autoSizeTextType="uniform"
            android:gravity="center"
            android:hint="@string/hint_otp"
            android:importantForAutofill="no"
            android:inputType="number"
            android:maxLength="6"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/tv_counter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/light_green"
            android:textSize="20sp"
            android:layout_marginTop="20dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/tv_resend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:autoSizeTextType="uniform"
                android:text="@string/noOtp"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/btn_resend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoSizeTextType="uniform"
                android:text="@string/resend"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:textColor="@color/blue"
                android:textSize="15sp"
                android:gravity="center"
                android:layout_marginStart="10dp" />
        </LinearLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_signUp"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="80dp"
            android:gravity="center"
            android:backgroundTint="@color/primary"
            app:cornerRadius="5dp"
            app:strokeWidth="1dp"
            app:strokeColor="@color/black"
            android:text="@string/signup"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:transitionName="transition_signUp"
            tools:targetApi="lollipop" />

    </LinearLayout>

</LinearLayout>

</ScrollView>